--- a/gem/Gemfile
+++ b/gem/Gemfile
@@ -1,4 +1,4 @@
 source 'https://rubygems.org'
 
-# Specify your gem's dependencies in capybara-select2.gemspec
+# Specify your gem's dependencies in capybara-chooser.gemspec
 gemspec
